correction suite au vioaltion Sonnar